# hif-core

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: documentation.yml  macos.yml  ubuntu.yml  windows.yml
include/hif/: AncestorVisitor.hpp  BiVisitor.hpp  BiVisitor.i.hpp  DeclarationVisitor.hpp  GuideVisitor.hpp  HifFactory.hpp  HifNodeRef.hpp  HifVisitor.hpp  MapVisitor.hpp  MapVisitor.i.hpp  NameTable.hpp  hif.hpp  hifEnums.hpp  hifIOUtils.hpp  hifPrinter.hpp  hifVersion.hpp  search.hpp  trash.hpp
include/hif/analysis/: analysis.hpp  analysisTypes.hpp  analyzeProcesses.hpp  analyzeSpans.hpp  insertDelays.hpp  sortGraph.hpp  splitMixedProcesses.hpp
include/hif/application_utils/: CommandLineParser.hpp  ConfigurationManager.hpp  FileStructure.hpp  Log.hpp  StepFileManager.hpp  application.hpp  application_utils.hpp  dumpVersion.hpp  hifGetOpt.hpp  portability.hpp
include/hif/backends/: CHifDirStruct.hpp  IndentedStream.hpp  NodeVisitor.hpp  Properties.hpp  Session.hpp  backendManipulations.hpp  backends.hpp  printFileMethods.hpp
include/hif/classes/: Action.hpp  Aggregate.hpp  AggregateAlt.hpp  Alias.hpp  Alt.hpp  Array.hpp  Assign.hpp  BList.hpp  BList.i.hpp  BListHost.hpp  BaseContents.hpp  Bit.hpp  BitValue.hpp  Bitvector.hpp  BitvectorValue.hpp  Bool.hpp  BoolValue.hpp  Break.hpp  Cast.hpp  Char.hpp  CharValue.hpp  CompositeType.hpp  Const.hpp  ConstValue.hpp  Contents.hpp  Continue.hpp  DataDeclaration.hpp  Declaration.hpp  DesignUnit.hpp  Entity.hpp  Enum.hpp  EnumValue.hpp  Event.hpp  Expression.hpp  Field.hpp  FieldReference.hpp  File.hpp  For.hpp  ForGenerate.hpp  Function.hpp  (+75 more)
include/hif/features/: IFeature.hpp  INamedObject.hpp  ISymbol.hpp  ITypeSpan.hpp  features.hpp
include/hif/hif_utils/: apply.hpp  compare.hpp  copy.hpp  declarationPropertyUtils.hpp  equals.hpp  getChildSkippingObjects.hpp  getMatchingScope.hpp  getNearestCommonParent.hpp  getNearestParent.hpp  getNearestScope.hpp  getParentSkippingObjects.hpp  hif_utils.hpp  isInTree.hpp  isSubNode.hpp  objectGetKey.hpp  objectPropertyUtils.hpp  operatorUtils.hpp  rangePropertyUtils.hpp  terminalInstanceUtils.hpp  terminalPrefixUtils.hpp  typePropertyUtils.hpp
include/hif/manipulation/: SimplifyOptions.hpp  addDeclarationInContext.hpp  addUniqueObject.hpp  aggregateUtils.hpp  assignUtils.hpp  assureSyntacticType.hpp  bindOpenPortAssigns.hpp  (+59 more)
src/: AncestorVisitor.cpp  BList.cpp  BListHost.cpp  DeclarationVisitor.cpp  GuideVisitor.cpp  HifFactory.cpp  HifNodeRef.cpp  HifVisitor.cpp  NameTable.cpp  PrintHifVisitor.cpp  PrintXmlVisitor.cpp  XmlParser.cpp  hifEnums.cpp  hifIOUtils.cpp  search.cpp  trash.cpp
src/analysis/: analyzeProcesses.cpp  analyzeSpans.cpp  insertDelays.cpp  sortGraph.cpp  splitMixedProcesses.cpp
src/application_utils/: CommandLineParser.cpp  ConfigurationManager.cpp  FileStructure.cpp  Log.cpp  StepFileManager.cpp  application.cpp  dumpVersion.cpp  hifGetOpt.cpp  portability.cpp
src/backends/: CHifDirStruct.cpp  IndentedStream.cpp  NodeVisitor.cpp  Properties.cpp  Session.cpp  backendManipulations.cpp  printFileMethods.cpp
src/classes/: Action.cpp  Aggregate.cpp  AggregateAlt.cpp  Alias.cpp  Alt.cpp  Array.cpp  Assign.cpp  BaseContents.cpp  Bit.cpp  BitValue.cpp  Bitvector.cpp  BitvectorValue.cpp  Bool.cpp  BoolValue.cpp  Break.cpp  Cast.cpp  Char.cpp  CharValue.cpp  CompositeType.cpp  Const.cpp  ConstValue.cpp  Contents.cpp  Continue.cpp  DataDeclaration.cpp  Declaration.cpp  DesignUnit.cpp  Entity.cpp  Enum.cpp  EnumValue.cpp  Event.cpp  Expression.cpp  Field.cpp  FieldReference.cpp  File.cpp  For.cpp  ForGenerate.cpp  Function.cpp  FunctionCall.cpp  Generate.cpp  GlobalAction.cpp  (+70 more)
src/features/: IFeature.cpp  INamedObject.cpp  ISymbol.cpp  ITypeSpan.cpp
src/hif_utils/: compare.cpp  copy.cpp  declarationPropertyUtils.cpp  equals.cpp  getChildSkippingObjects.cpp  getMatchingScope.cpp  getNearestCommonParent.cpp  getNearestParent.cpp  getNearestScope.cpp  getParentSkippingObjects.cpp  isInTree.cpp  isSubNode.cpp  objectGetKey.cpp  objectPropertyUtils.cpp  operatorUtils.cpp  rangePropertyUtils.cpp  terminalInstanceUtils.cpp  terminalPrefixUtils.cpp  typePropertyUtils.cpp
src/manipulation/: addDeclarationInContext.cpp  addUniqueObject.cpp  aggregateUtils.cpp  assignUtils.cpp  assureSyntacticType.cpp  bindOpenPortAssigns.cpp  buildHierarchicalSymbol.cpp  checkConflictingName.cpp  collectLeftHandSideSymbols.cpp  createConcatFromSpans.cpp  expandAliases.cpp  expandGenerates.cpp  explicitCallsParameters.cpp  findScopeDependencies.cpp  findTopLevelModule.cpp  findViewDependencies.cpp  fixAssignments.cpp  fixInstanceBindings.cpp  fixMultipleSignalPortAssigns.cpp  fixNestedDeclarations.cpp  fixRangesDirection.cpp  fixTemplateParameters.cpp  fixUnsupportedBits.cpp  flattenDesign.cpp  getDeclarationTotalInstances.cpp  instanceUtils.cpp  isAbstractionSubProgram.cpp  mapToNative.cpp  matchObject.cpp  matchPatternInTree.cpp  matchTrees.cpp  matchedGet.cpp  matchedInsert.cpp  mergeTrees.cpp  moveDeclaration.cpp  moveToScope.cpp  narrowToCardinality.cpp  prefixTree.cpp  propagateSymbols.cpp  rangeGetIncremented.cpp  (+23 more)
src/semantics/: DeclarationOptions.cpp  DeclarationsStack.cpp  HIFSemantics.cpp  HIFSemantics_init.cpp  HIFSemantics_methods.cpp  ILanguageSemantics.cpp  ILanguageSemantics_methods.cpp  SemanticAnalysis.cpp  SystemCSemantics.cpp  SystemCSemantics_init.cpp  SystemCSemantics_methods.cpp  VHDLSemantics.cpp  VHDLSemantics_init.cpp  VHDLSemantics_methods.cpp  VerilogSemantics.cpp  VerilogSemantics_init.cpp  VerilogSemantics_methods.cpp  analyzePrecisionType.cpp  callingProcessesUtils.cpp  canRemoveInternalCast.cpp  checkHif.cpp  collectSymbols.cpp  comparePrecision.cpp  compareValues.cpp  declarationUtils.cpp  getBaseType.cpp  getInstantiatedType.cpp  getOtherOperandType.cpp  getSemanticType.cpp  getVectorElementType.cpp  manageCasts.cpp  mapDeclarationsInTree.cpp  mapStandardSymbols.cpp  rangeGetBitwidth.cpp  rangeGetMax.cpp  rangeGetSum.cpp  referencesUtils.cpp  resetDeclarations.cpp  resetTypes.cpp  setDeclaration.cpp  (+6 more)
src/univerCM/: univerCM.cpp
(+37 files in other folders)
